--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,9 @@
 .container{
-
   background-color: rgba(64, 181, 224, 0.39);
-  width: 100%;
-  height: 300vh;
+  min-width: 100%;
+  min-height: 300vh;
+}
+main{
+  display: flex;
+  justify-content: center;
 }
