--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<div class="container">
-  <!-- <nav>
+<div class="container" >
+  <nav>
     <ul>
       <li><a routerLink="/card">Card</a></li>
     </ul>
-  </nav> -->
-  <router-outlet></router-outlet>
+  </nav>
+  <h1 appHighlight>{{title}}</h1>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </div>
