--- a/src/card/card.component.css
+++ b/src/card/card.component.css
@@ -1,9 +1,6 @@
 .card {
-  width: 35vh;
-  margin: 12px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 16px;
   text-align: center;
   background-color: #fff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -12,7 +9,6 @@
 .box-container{
   display: flex;
   flex-direction: column;
-  margin-left: 20%;
   
 }
 
@@ -20,20 +16,20 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  /* min-width: 90%; */
 }
 .card-container{
   display: flex;
   flex-direction: row;
-  min-height: 20vh;
 }
 .box{
+  display: flex;
+  justify-content: flex-start;  
+  align-items: center;
   margin-top: 2%;
   padding: 10px;
   background-color: white;
   height: 30vh;
-  width: 80%;
   border: 1px solid #ddd;  
-  display: flex;
-  justify-content: flex-start;  
-  align-items: center;
+
 }
