--- a/src/card/card.component.html
+++ b/src/card/card.component.html
@@ -1,17 +1,27 @@
 <div class="box-container">
+  <app-greetings></app-greetings>
   <div class="box">
     <div class="inner-box-container">
-      <div><h2>Today's Metric</h2></div>
-      <div class="card-container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+      <div style="display: flex; flex-direction: column;">
+        <img src="image" alt="logo">
+        <h2>Card Templates</h2>
+        <button  style="max-width: 60px;" (click)="onClick()"> Show Metric </button>
+      </div>
+      <div class="card-container" *ngIf="showData">
+        <div style = "display: flex; " *ngFor="let card of cards">
+          <div class="card">
+            <h3>{{ card.title }}</h3>
+            <p>{{ card.description | sentenceCase}}</p>
+          </div>
+
+        </div>
       </div>
     </div>
-    
+
   </div>
   <div class="box">
 
   </div>
+
 
 </div>
