--- a/src/card/card.component.css
+++ b/src/card/card.component.css
@@ -4,12 +4,13 @@
   text-align: center;
   background-color: #fff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out; /* Add a hover effect */
+  transition: transform 0.3s ease-in-out;
+  word-break: normal;
 }
 .box-container{
   display: flex;
   flex-direction: column;
-  
+  min-height: max-content;
 }
 
 .inner-box-container{
