--- a/src/card/card.component.html
+++ b/src/card/card.component.html
@@ -3,25 +3,30 @@
   <div class="box">
     <div class="inner-box-container">
       <div style="display: flex; flex-direction: column;">
-        <img src="image" alt="logo">
         <h2>Card Templates</h2>
-        <button  style="max-width: 60px;" (click)="onClick()"> Show Metric </button>
+        <button style="max-width: 60px;" (click)="onClick()"> Show Metric </button>
       </div>
-      <div class="card-container" *ngIf="showData">
-        <div style = "display: flex; " *ngFor="let card of cards">
-          <div class="card">
-            <h3>{{ card.title }}</h3>
-            <p>{{ card.description | sentenceCase}}</p>
+      <div style="display: flex; flex-direction: column;  " *ngIf="showData">
+        <div><input type="text" [(ngModel)]="filterText" placeholder="Search the card"></div>
+        <div class="card-container">
+          <div style="display: flex; " *ngFor="let card of cards | filter: filterText">
+            <div class="card">
+              <h3>{{ card.title }}</h3>
+              <p>{{ card.description | sentenceCase}}</p>
+              <p>Time: {{card.timestamp | dateConversion}}</p>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
 
   </div>
-  <div class="box">
-
+  <div style="display: flex; flex-direction: column;">
+    Name <input type="text" [(ngModel)]=" customer.name">
+    Address <input type="text" [(ngModel)]=" customer.address">
+    <button (click)="submitForm()">Submit</button>
+    <p>Name {{customer.name}}</p>
+    <p>Address {{customer.address}}</p>
   </div>
-
 
 </div>
